--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "whatsapp-bot (GSS-Botwa",
+  "name": "whatsapp-bot GSS-Botwa",
   "description": " Whatsapp bot.",
   "keywords": [
     "whatsapp bot"
