--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@distube/ytdl-core": "^4.13.2",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@whiskeysockets/baileys": "^6.2.1",
+    "api-dylux": "^1.6.5",
     "archiver": "^6.0.1",
     "awesome-phonenumber": "^2.64.0",
     "axios": "^0.24.0",
