--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@hapi/boom": "^10.0.1",
     "@whiskeysockets/baileys": "^6.2.1",
     "api-dylux": "^1.6.5",
     "archiver": "^6.0.1",
@@ -37,6 +38,7 @@
     "file-type": "^16.5.4",
     "fluent-ffmpeg": "^2.1.2",
     "fs": "0.0.1-security",
+    "fs-extra": "^11.1.1",
     "g-i-s": "^2.1.6",
     "gm": "^1.25.0",
     "google-it": "^1.6.3",
@@ -48,7 +50,7 @@
     "jsdom": "^16.4.0",
     "lowdb": "^2.1.0",
     "moment-timezone": "^0.5.34",
-    "mongoose": "^6.2.1",
+    "mongoose": "^6.12.3",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
     "node-id3": "^0.2.6",
