--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "path": "^0.12.7",
     "perf_hooks": "0.0.1",
     "pino": "^7.0.5",
+    "qrcode": "^1.5.3",
+    "qrcode-reader": "^1.0.4",
     "qrcode-terminal": "^0.12.0",
     "remove.bg": "^1.3.0",
     "request": "^2.88.2",
