--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "util": "^0.12.5",
     "xmlbuilder": "^15.1.1",
     "yargs": "^17.2.1"
+    "yt-search": "^2.10.4"
   },
   "directories": {
     "lib": "lib",
