--- a/package.json
+++ b/package.json
@@ -63,8 +63,6 @@
     "path": "^0.12.7",
     "perf_hooks": "0.0.1",
     "pino": "^7.0.5",
-    "qrcode": "^1.5.3",
-    "qrcode-reader": "^1.0.4",
     "qrcode-terminal": "^0.12.0",
     "remove.bg": "^1.3.0",
     "request": "^2.88.2",
@@ -74,7 +72,7 @@
     "truecallerjs": "^2.2.0",
     "util": "^0.12.5",
     "xmlbuilder": "^15.1.1",
-    "yargs": "^17.2.1"
+    "yargs": "^17.2.1",
     "yt-search": "^2.10.4"
   },
   "directories": {
