--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "util": "^0.12.5",
     "xmlbuilder": "^15.1.1",
     "yargs": "^17.2.1",
-    "yt-search": "^2.10.4"
+    "yt-search": "^2.10.4",
+    "ytdl-core": "^4.11.5"
   },
   "directories": {
     "lib": "lib",
