--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "xmlbuilder": "^15.1.1",
     "yargs": "^17.2.1",
     "yt-search": "^2.10.4",
-    "ytdl-core": "^4.11.5"
+    "ytdl-core": "^4.11.5",
+    "ytsr": "^3.8.4"
   },
   "directories": {
     "lib": "lib",
