--- a/package.json
+++ b/package.json
@@ -61,8 +61,10 @@
     "openai": "^4.11.1",
     "os": "^0.1.2",
     "path": "^0.12.7",
+    "pdf-lib": "^1.17.1",
     "perf_hooks": "0.0.1",
     "pino": "^7.0.5",
+    "qrcode": "^1.5.3",
     "qrcode-reader": "^1.0.4",
     "qrcode-terminal": "^0.12.0",
     "remove.bg": "^1.3.0",
