--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "googleapis": "^127.0.0",
     "got": "^11.8.3",
     "human-readable": "^0.2.1",
+    "image-size": "^1.0.2",
     "jimp": "^0.16.1",
     "jsdom": "^16.4.0",
     "lowdb": "^2.1.0",
