--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@google/generative-ai": "^0.1.3",
     "@hapi/boom": "^10.0.1",
     "@whiskeysockets/baileys": "^6.2.1",
     "api-dylux": "^1.6.5",
@@ -30,6 +31,7 @@
     "archiver": "^6.0.1",
     "awesome-phonenumber": "^2.64.0",
     "axios": "^0.24.0",
+    "betabotz-tools": "^0.0.6",
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0-rc.10",
     "child_process": "^1.0.2",
