--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@google/generative-ai": "^0.1.3",
     "@hapi/boom": "^10.0.1",
     "@whiskeysockets/baileys": "^6.2.1",
+    "acrcloud": "^1.4.0",
     "api-dylux": "^1.6.5",
     "aptoide-scraper": "^1.0.1",
     "archiver": "^6.0.1",
