--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "google-tts-api": "^0.0.6",
     "googleapis": "^127.0.0",
     "got": "^11.8.3",
+    "heroku-client": "3.1.0",
     "human-readable": "^0.2.1",
     "image-size": "^1.0.2",
     "jimp": "^0.16.1",
@@ -75,6 +76,7 @@
     "remove.bg": "^1.3.0",
     "request": "^2.88.2",
     "scrape-primbon": "^1.1.0",
+    "simple-git": "^3.16.1",
     "stream": "^0.0.2",
     "translate-google-api": "^1.0.4",
     "truecallerjs": "^2.2.0",
