--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ffmpeg": "^0.0.4",
     "file-type": "^16.5.4",
     "fluent-ffmpeg": "^2.1.2",
+    "formdata-node": "^4.3.2",
     "fs": "0.0.1-security",
     "fs-extra": "^11.1.1",
     "g-i-s": "^2.1.6",
