--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "ffmpeg": "^0.0.4",
+    "figlet": "^1.5.0",
     "file-type": "^16.5.4",
     "fluent-ffmpeg": "^2.1.2",
     "formdata-node": "^4.3.2",
