--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "jimp": "^0.16.1",
     "jsdom": "^16.4.0",
     "lowdb": "^2.1.0",
+    "miniget": "^4.2.2",
     "moment-timezone": "^0.5.34",
     "mongoose": "^6.12.3",
     "mumaker": "^1.0.0",
@@ -68,6 +69,7 @@
     "node-id3": "^0.2.6",
     "node-os-utils": "^1.3.7",
     "node-webpmux": "^3.1.0",
+    "node-youtube-music": "^0.8.3",
     "openai": "^4.11.1",
     "os": "^0.1.2",
     "path": "^0.12.7",
@@ -77,16 +79,19 @@
     "qrcode": "^1.5.3",
     "qrcode-reader": "^1.0.4",
     "qrcode-terminal": "^0.12.0",
+    "qs": "^6.11.0",
     "remove.bg": "^1.3.0",
     "request": "^2.88.2",
     "scrape-primbon": "^1.1.0",
     "simple-git": "^3.16.1",
     "stream": "^0.0.2",
+    "syntax-error": "*",
     "translate-google-api": "^1.0.4",
     "truecallerjs": "^2.2.0",
     "util": "^0.12.5",
     "xmlbuilder": "^15.1.1",
     "yargs": "^17.2.1",
+    "youtube-yts": "^2.0.0",
     "yt-search": "^2.10.4",
     "ytdl-core": "^4.11.5",
     "ytsr": "^3.8.4"
