--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "node-os-utils": "^1.3.7",
     "node-webpmux": "^3.1.0",
     "node-youtube-music": "^0.8.3",
+    "object-query-string": "^1.2.0",
     "openai": "^4.11.1",
     "os": "^0.1.2",
     "path": "^0.12.7",
