--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "xmlbuilder": "^15.1.1",
     "yargs": "^17.2.1",
     "youtube-yts": "^2.0.0",
+    "youtubedl-core": "^4.11.4"
     "yt-search": "^2.10.4",
     "ytdl-core": "^4.11.5",
     "ytsr": "^3.8.4"
