--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "youtube-yts": "^2.0.0",
     "yt-search": "^2.10.4",
     "ytdl-core": "^4.11.5",
+    "youtubedl-core": "^4.11.4",
     "ytsr": "^3.8.4"
   },
   "directories": {
