--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "qs": "^6.11.0",
     "remove.bg": "^1.3.0",
     "request": "^2.88.2",
+    "rimraf": "^3.0.2",
     "scrape-primbon": "^1.1.0",
     "simple-git": "^3.16.1",
     "stream": "^0.0.2",
