--- a/app.json
+++ b/app.json
@@ -5,20 +5,45 @@
   "repository": "https://github.com/gssbotwa/Gssbotwa2",
   "stack": "container",
   "env": {
+    "AUTO_READ": {
+      "description": "Enable auto read feature",
+      "required": false,
+      "value": ""
+    },
+    "ALWAYS_ONLINE": {
+  "description": "Enable always online feature",
+  "required": false,
+  "value": ""
+},
+"AUTO_TYPING": {
+  "description": "Enable auto typing feature",
+  "required": false,
+  "value": ""
+},
     "MONGO_DB": {
       "description": "your mongodb database url",
       "required": true,
       "value": ""
     },
-    "SESSION_ID": {
-  "description": "PASTE YOUR SESSION ID",
+    "TYPEMENU": {
+  "description": "choose menu type from 1 to 5",
   "required": false,
   "value": ""
 },
-    "TYPEMENU": {
-  "description": "choose menu type from v1 to v5",
+"ONLYGROUP": {
+  "description": "true for bot work in only group otherwise false",
   "required": false,
-  "value": "v1"
+  "value": "false"
+},
+"ONLYPC": {
+  "description": "true for bot work in only private chat otherwise false",
+  "required": false,
+  "value": "false"
+},
+"AUTO_BLOCK_ENABLED": {
+  "description": "Enable auto block feature",
+  "required": false,
+  "value": "true"
 }
   },
   "buildpacks": [
@@ -35,4 +60,4 @@
       "url": "https://github.com/clhuang/heroku-buildpack-webp-binaries.git"
     }
   ]
-} 
+}
