--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
-name: Deploy 
+name: Deploy Bot
 
 on:
   push:
     branches:
-      - main  
+      - main  # ou la branche que vous utilisez pour les déploiements
 
 jobs:
   deploy:
@@ -15,17 +15,11 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '18'  
+        node-version: '18'  # ou la version de Node.js que vous utilisez
 
     - name: Install dependencies
       run: npm install
 
-    - name: Install PM2
-      run: npm install -g pm2
-
-    - name: Start famous-xd-bot with PM2
+    - name: Start bot
       run: |
-        pm2 start index.js --name "famous-xd"  
-        pm2 save
-        pm2 startup
-        pm2 status
+        node index.js
