--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,33 @@
-name: Deploy FAMOUS-XD 
+name: Node.js CI
 
 on:
   push:
     branches:
-      - main  
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  deploy:
+  build:
+
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [20.x]
+
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v3
 
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '18'
+        node-version: ${{ matrix.node-version }}
 
     - name: Install dependencies
-      run: npm install
+      run:  npm install || yarn install
 
-    - name: Start bot
-      run: |
-        node index.js , node gss.js
+    - name: Start FAMOUS-XD 
+      run: npm start
